# kubecon2023

./: README.md
components/: README.md  wasi_snapshot_preview1.wasm
components/aggfill/: README.md
components/bankaccount_aggregate/: Cargo.toml  componentize.sh  rust-toolchain.toml
components/bankaccount_aggregate/.cargo/: config.toml
components/bankaccount_aggregate/src/: lib.rs
components/concordance-fill/: Cargo.toml  README.md  componentize.sh
components/concordance-fill/src/: lib.rs
components/deploy/: bankaccountaggregate.component.wasm  concordancefill.component.wasm  sign_linked.sh  wasmcloudfill.component.wasm
components/entrypoint/: Cargo.toml  README.md
components/entrypoint/src/: lib.rs  types.rs
components/wasmcloud-fill/: Cargo.toml  README.md  componentize.sh
components/wasmcloud-fill/src/: lib.rs
components/wit/: bankaccount-aggregate.wit  concordance-fill.wit  concordance.wit  entrypoint.wit  host.wit  types.wit  wasmcloud.wit
