[package]
name = "bankaccount_aggregate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bankaccount_aggregate"

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.4.0" }
#wit-component = { version = "0.7.4", default-features = false }
