[package]
name = "concordance-fill"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "concordance_fill"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
wasmbus-rpc = "0.12.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.4.0" }
